--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,12 @@
 
 // Owl Carousel
 @import 'styles/owl.carousel';
+
+// Owl Carousel
+@import 'styles/theme';
+
+// Misc
+@import 'styles/misc';
+
+// Pages
+@import "app/home";
