Added services to home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22499,3 +22499,29 @@ footer .credits {
   padding: 100px 0px;
 }
 
+#our_services .service {
+  margin: 20px 0px;
+  text-align: center;
+}
+
+#our_services .service .icon {
+  background: #2eca6a;
+  width: 124px;
+  height: 124px;
+  text-align: center;
+  margin: 0px auto;
+  border-radius: 50%;
+  position: relative;
+}
+
+#our_services .service .icon img {
+  margin-top: 20px;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  width: 74px;
+}
+
+#our_services .service .service-text {
+  margin: 20px 0px;
+}
+
