--- a/resources/sass/app/home.scss
+++ b/resources/sass/app/home.scss
@@ -29,3 +29,25 @@
     margin: 20px 0px;
   }
 }
+
+#our_strengths {
+  background: url('/img/our_strengths.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  .container {
+    padding: 100px 0px;
+  }
+  h2, h4, span  {
+    color: #FFF;
+  }
+  .counter {
+    margin: 50px 0px 20px 0px;
+    text-align: center;
+  }
+  .counter-number {
+    font-size: 4rem;
+  }
+  .counter-text {
+  }
+}
