--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22555,3 +22555,11 @@ footer .credits {
   font-size: 4rem;
 }
 
+#aboutus-full .container {
+  padding: 100px 0px;
+}
+
+#aboutus-full img {
+  width: inherit;
+}
+
