--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22571,3 +22571,39 @@ footer .credits {
   width: inherit;
 }
 
+#project_all .project-card {
+  position: relative;
+  cursor: pointer;
+}
+
+#project_all .img-box {
+  overflow: hidden;
+}
+
+#project_all .img-box img {
+  width: 100%;
+  height: 320px;
+  transition: all 300ms;
+}
+
+#project_all .project-card:hover .img-box img {
+  transform: scale(1.2);
+}
+
+#project_all .overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: #00000030;
+}
+
+#project_all .project-title {
+  position: absolute;
+  color: #FFF;
+  bottom: 5px;
+  left: 10px;
+  font-size: 1.2rem;
+}
+
