--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22596,7 +22596,6 @@ footer .credits {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: #00000030;
 }
 
 #project_all .project-title {
@@ -22605,5 +22604,31 @@ footer .credits {
   bottom: 5px;
   left: 10px;
   font-size: 1.2rem;
+}
+
+#project_all .filter-button-group {
+  text-align: center;
+}
+
+#project_all .button-group button {
+  outline: 0;
+  cursor: pointer;
+  margin: 15px 15px 15px 0;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #666666;
+  border-radius: 4px;
+  text-transform: uppercase;
+  background: #f5f5f5;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+  border: none;
+}
+
+#project_all .button-group .mixitup-control-active {
+  background: #2eca6a;
+  color: #FFF;
 }
 
