--- a/resources/sass/app/projects.scss
+++ b/resources/sass/app/projects.scss
@@ -20,7 +20,7 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    background: #00000030;
+    // background: #00000030;
   }
   .project-title {
     position: absolute;
@@ -28,5 +28,28 @@
     bottom: 5px;
     left: 10px;
     font-size: 1.2rem;
+  }
+  .filter-button-group {
+    text-align: center;
+  }
+  .button-group button {
+    outline:0;
+    cursor: pointer;
+    margin: 15px 15px 15px 0;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #666666;
+    border-radius: 4px;
+    text-transform: uppercase;
+    background: #f5f5f5;
+    margin-bottom: 5px;
+    transition: all 0.3s ease-in-out;
+    border: none;
+  }
+  .button-group .mixitup-control-active {
+    background: #2eca6a;
+    color: #FFF;
   }
 }
