Updated Project model, added resizeable

--- a/resources/sass/app/projects.scss
+++ b/resources/sass/app/projects.scss
@@ -2,6 +2,8 @@
   .project-card {
     position: relative;
     cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
   .img-box {
     overflow: hidden;
