--- a/resources/sass/styles/theme.css
+++ b/resources/sass/styles/theme.css
@@ -1535,7 +1535,7 @@ footer {
 }
 
 footer .copyright-footer {
-  border-top: 1px solid #ddd;
+  /* border-top: 1px solid #ddd; */
   padding-top: 20px;
 }
 
